--- a/seminar/introduction.tex
+++ b/seminar/introduction.tex
@@ -1,3 +1,6 @@
 %&latex
 \section{Introduction}
 { \textcolor{gray}\blindtext }
+
+% achieve the same with the same approach
+% -> same that affords ... a different approach
