--- a/seminar/seminar.bib
+++ b/seminar/seminar.bib
@@ -110,6 +110,14 @@
   url =          "https://alschwalm.com/blog/static/2017/03/07/exploring-dynamic-dispatch-in-rust/"
 }
 
+@misc { intmutpatterns,
+  author =       {Paul Dicker},
+  title =        "{Interior mutability patterns}",
+  date =         {28 December},
+  year =         "2019 (accessed June 2, 2021)",
+  url =          "https://pitdicker.github.io/Interior-mutability-patterns/"
+}
+
 @misc { wzrd,
   author =       {Max van Deurzen},
   title =        "{wzrd: An ICCCM \& EWMH compliant X11 (XCB) reparenting, dynamic window manager, written in Rust}",
