--- a/seminar/conclusion.tex
+++ b/seminar/conclusion.tex
@@ -1,3 +1,13 @@
 %&latex
 \section{Conclusion}
-{ \textcolor{gray}\blindtext }
+
+We have compared Rust and \cpp in their pragmatics when writing medium to
+large system software. Specifically, we have sought to achieve \textit{the
+same objective} using both languages: the implementating of a window manager.
+In doing so, we have discussed four core phases in the implementation of
+such software: external dependency management, the main event loop and event
+dispatch, input bindings and the storage of callable objects, and, finally, the
+central storage and distributed mutating of state.
+
+Even though Rust is able to make certain guarantees in regard to memory safety and data races, it is still often able to capture more concisely and elegently the semantics 
+
