--- a/seminar/abstract.tex
+++ b/seminar/abstract.tex
@@ -8,8 +8,8 @@ deals with the practical aspects of how language constructs and features allow
 its users to achieve various objectives\cite{pragmatics}. In this paper, we
 will look at the pragmatics of both Rust and \cpp. Specifically, we will be
 comparing the languages in their ability to be used as a tool to write medium
-to large \textit{system programs}. As a case study, we will be discussing two
-implementations of a complete ICCCM\cite{icccm} and EWMH\cite{ewmh} compliant
+to large \textit{system programs}. As a case study, we will be discussing
+two implementations of an ICCCM\cite{icccm} and EWMH\cite{ewmh} compliant
 top-level reparenting, tiling window manager, built on top of the X Window
 System\cite{x11}: one written in Rust\cite{wzrd}, and the other in \cpp.
 
