--- a/seminar/conclusion.tex
+++ b/seminar/conclusion.tex
@@ -24,10 +24,10 @@ does so solely through \textit{trait} implementations.
 Rust's safety guarantees indeed make the language demonstrably superior from
 an \textit{error mitigation} point of view. However, those guarantees can at
 times still come at a cost in light of its pragmatics. Assuming memory safety
-assertions are properly taken care of, dealing with references in \cpp can be
-much easier than in Rust. Due to the fact that Rust's borrow checking system
+assertions are properly taken care of, dealing with references can be much
+easier in \cpp than in Rust. Due to the fact that Rust's borrow checking system
 is more restrictive than strictly necessary, certain programming patterns are
-even unable to be used, such as, for instance, self-referential structures. In
+unable to be used, such as, for instance, self-referential structures. In
 fact, Rust even has \textit{interior mutability} constructs just to improve
 programming flexibility, something \cpp has by default.
 
